--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <!-- -------Bootstrap CSS stylesheet ---------- -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
+  
+  <!-- Shortcut Icon -->
+  <link rel="shortcut icon" href="lion.png" type="image/x-icon">
 
   <!-- ---------Vanilla CSS---------------------  -->
   <link rel="stylesheet" href="css/styles.css" />
